compiler/testData/diagnostics/tests/enum/interfaceWithEnumKeyword.fir.kt
<!WRONG_MODIFIER_TARGET!>enum<!> interface Some {
    // Enum part
    <!ABSTRACT_MEMBER_NOT_IMPLEMENTED_BY_ENUM_ENTRY!>D<!>;

    // Interface like part
    fun test()
    val foo: Int
}
